--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,31 @@ h1 {
   margin-bottom: 30px;
 }
 
-/* 容器样式 */
+/* 外层容器样式 */
+.wrapper {
+  max-width: 600px;
+  margin: 0 auto;
+  /* padding: 30px; */
+  /* background-color: #fff; */
+  /* border-radius: 10px; */
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+}
+
+/* 说明文字的样式 */
+.note {
+  font-size: 14px;
+  color: #555;
+  text-align: right;
+  font-weight: bold;
+  margin-top: 10px;
+  padding-left: 10px;
+  /* 左对齐 */
+}
+
+.note p {
+  margin: 0;
+}
+
 .container {
   max-width: 600px;
   margin: 0 auto;
@@ -23,6 +47,7 @@ h1 {
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 
 .input-group {
   margin-bottom: 20px;
@@ -83,23 +108,6 @@ label {
 
 input-box.shake-border {
   animation: shake 0.5s ease-in-out;
-}
-
-/* 按钮样式 */
-button {
-  background-color: #3498db;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  width: 100%;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #2980b9;
 }
 
 /* 动画：输入框的闪烁效果 */
