--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ h1 {
 .note {
   font-size: 14px;
   color: #555;
-  text-align: right;
+  text-align: center;
   font-weight: bold;
   margin-top: 10px;
   padding-left: 10px;
